Fix counter layout shifting issue

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,3 +1,8 @@
 .footer {
   color: var(--very-dark-grayish-blue);
 }
+
+.count-left {
+  display: inline-block;
+  width: 1rem;
+}
